--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">My SOP</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_add_category">AddCategory</string>
+    <string name="add_a_new_category">Add a new category</string>
 </resources>
