--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_category">AddCategory</string>
     <string name="add_a_new_category">Add a new category</string>
+    <string name="category_name">Category Name</string>
+    <string name="save">Save</string>
 </resources>
