--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_a_new_category">Add a new category</string>
     <string name="category_name">Category Name</string>
     <string name="save">Save</string>
+    <string name="title_activity_listof_sops">ListofSOPs</string>
 </resources>
