--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="add_a_new_category">Add a new category</string>
     <string name="category_name">Category Name</string>
     <string name="save">Save</string>
-    <string name="title_activity_listof_sops">ListofSOPs</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_list_of_sops">List of SOPs</string>
+    <string name="title_list_of_steps">List of Steps</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
