Correction: removed all hardcode strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="search_users">Search Users</string>
     <string name="search">search</string>
     <string name="sharedbooks">No shared Handbooks</string>
-    <string name="add_book_to_shelf">Add a Handbook to</string>
+    <string name="add_book_to_shelf">Add a Handbook to </string>
     <string name="no_dexcrip">No Description</string>
     <string name="edit_shelfName">Edit the shelf name</string>
     <string name="book_info">Edit Book info</string>
@@ -63,5 +63,93 @@
     <string name="add_book_shelf">Add Book Shelf</string>
     <string name="add_handbook">Add Handbook</string>
     <string name="add_page">Add Page</string>
+    <string name="sent_to">sent to</string>
+    <string name="no_user">No user by that name.</string>
+    <string name="sop">sop</string>
+    <string name="signin">signIn</string>
+    <string name="mysop">mysop</string>
+    <string name="bookmarked">Bookmarked</string>
+    <string name="sharedbooks1">Shared Books</string>
+    <string name="bookmarkpass">JonNyBgOoDeMARKED</string>
+    <string name="sharedpass">JonNyBgOoDeSHARED</string>
+    <string name="new_bookshelf">Create a book shelf   to keep your handbooks organized</string>
+    <string name="sharedbook">Shared Book</string>
+    <string name="bookfrom">Handbook from</string>
+    <string name="receive">would you like to receive</string>
+    <string name="not_accepted">Item not accepted</string>
+    <string name="sharedbooks2">Shared Books</string>
+    <string name="sharedstatus">sharedStatus</string>
+    <string name="category">category</string>
+    <string name="shelftitle">shelfTitle</string>
+    <string name="id">id</string>
+    <string name="editshelf">Edit Shelf</string>
+    <string name="catexsits">This category already exists</string>
+    <string name="newcat">Please enter a category name</string>
+    <string name="sharedBy">was shared by</string>
+    <string name="d">id</string>
+    <string name="edit1">edit</string>
+    <string name="deleteentry">Delete entry</string>
+    <string name="rusuredelete">Are you sure you want to delete</string>
+    <string name="questionmark">\?</string>
+    <string name="isdeleted">is Deleted</string>
+    <string name="deleted">Deleted</string>
+    <string name="steps">steps</string>
+    <string name="usernameset">User nickname is set!</string>
+    <string name="user">Users</string>
+    <string name="username">userName</string>
+    <string name="alreadysignedin">Already Signed In as</string>
+    <string name="signedin">Signed in!</string>
+    <string name="signincanceled">Sign in canceled</string>
+    <string name="differentname">Choose a different user name</string>
+    <string name="email">email</string>
+    <string name="userupdated">User name updated</string>
+    <string name="nospaces">No spaces allowed</string>
+    <string name="users">Users</string>
+    <string name="pagephoto">page_photo</string>
+    <string name="usernameis">User name is</string>
+    <string name="editbook">editSop</string>
+    <string name="booktitle">sopTitle</string>
+    <string name="bookshelf">sopCategory</string>
+    <string name="bookcolor">bookColor</string>
+    <string name="red">Red</string>
+    <string name="blue">Blue</string>
+    <string name="green">Green</string>
+    <string name="yellow">Yellow</string>
+    <string name="orange">Orange</string>
+    <string name="wasselected">was selected</string>
+    <string name="editbooktitle">editSopTitle</string>
+    <string name="editid">editId</string>
+    <string name="bookexsits">This SOP already exists in</string>
+    <string name="shelf">category</string>
+    <string name="bookname">Please enter a SOP name</string>
+    <string name="handbook1">Handbooks</string>
+    <string name="unbookmarked">Un-Bookmarked</string>
+    <string name="editbookid">editId</string>
+    <string name="deletedentry">Delete entry</string>
+    <string name="quesionmark">\?</string>
+    <string name="shelftitle1">sopCategory</string>
+    <string name="pagenum">stepNumber</string>
+    <string name="addpage">Add Step</string>
+    <string name="editpage">Edit Step</string>
+    <string name="editssaved">Edits were saved</string>
+    <string name="entertitle">Please enter a title for the step</string>
+    <string name="stepsspace">Step</string>
+    <string name="editpage1">editStep</string>
+    <string name="pagetitle">stepTitle</string>
+    <string name="pagedescrip">stepDescription</string>
+    <string name="pagepic">editImage</string>
+    <string name="image">image/*</string>
+    <string name="permisdenied">Permission denied to read your External storage</string>
+    <string name="jpg">.jpg</string>
+    <string name="premisden">Permission denied to</string>
+    <string name="widgetpage">Pages added to widget</string>
+    <string name="pagehoto">page_photo</string>
+    <string name="position">position</string>
+    <string name="outof">out of</string>
+    <string name="spacestep">Step</string>
+    <string name="deletestep">Delete step</string>
+    <string name="rusuredele">Are you sure you want to delete this step?</string>
+    <string name="isdeletednow">is Deleted from book</string>
+    <string name="handbookspace">Handbook</string>
 
 </resources>
