--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
     <string name="d">id</string>
     <string name="edit1">edit</string>
     <string name="deleteentry">Delete entry</string>
-    <string name="rusuredelete">Are you sure you want to delete</string>
+    <string name="rusuredelete">Are you sure you want to delete \</string>
     <string name="questionmark">\?</string>
     <string name="isdeleted">is Deleted</string>
     <string name="deleted">Deleted</string>
