--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,11 +145,12 @@
     <string name="widgetpage">Pages added to widget</string>
     <string name="pagehoto">page_photo</string>
     <string name="position">position</string>
-    <string name="outof">out of</string>
-    <string name="spacestep">Step</string>
+    <string name="outof">\ out of \</string>
+    <string name="spacestep">Page \</string>
     <string name="deletestep">Delete step</string>
     <string name="rusuredele">Are you sure you want to delete this step?</string>
     <string name="isdeletednow">is Deleted from book</string>
     <string name="handbookspace">Handbook</string>
+    <string name="no_image">No Image</string>
 
 </resources>
