--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,23 +16,23 @@
     <string name="handbook_title">Handbook Title</string>
     <string name="color_of_book">Color of book</string>
     <string name="add_step">add step</string>
-    <string name="save_sop">save SOP</string>
+    <string name="save_sop">save book</string>
     <string name="firebase">FireBase</string>
     <string name="create_a_unique_username_must_be_one_word">Create a unique username. Must be one word.</string>
     <string name="user_name">User Name</string>
     <string name="create_user_name">Create User name</string>
     <string name="shared_by">Shared BY:</string>
     <string name="no_handbook_selected_to_display">No Handbook selected to display.</string>
-    <string name="create_a_book_shelf">Create a book Shelf</string>
+    <string name="create_a_book_shelf">Create a book shelf</string>
     <string name="book_shelf_name">Book Shelf Name</string>
     <string name="prev">prev</string>
     <string name="next">next</string>
-    <string name="step_title">Step Title</string>
+    <string name="step_title">Page Title</string>
     <string name="add_image">Add Image</string>
-    <string name="add_description_of_step">Add description of step</string>
-    <string name="complete_sop">Complete SOP</string>
-    <string name="add_another_step">add another step</string>
-    <string name="save_step">Save step</string>
+    <string name="add_description_of_step">Add description for page</string>
+    <string name="complete_sop">Complete Book</string>
+    <string name="add_another_step">add another page</string>
+    <string name="save_step">Save page</string>
     <string name="search_users">Search Users</string>
     <string name="search">search</string>
     <string name="sharedbooks">No shared Handbooks</string>
@@ -122,18 +122,18 @@
     <string name="bookexsits">This SOP already exists in</string>
     <string name="shelf">category</string>
     <string name="bookname">Please enter a SOP name</string>
-    <string name="handbook1">Handbooks</string>
+    <string name="handbook1">\ Handbooks</string>
     <string name="unbookmarked">Un-Bookmarked</string>
     <string name="editbookid">editId</string>
     <string name="deletedentry">Delete entry</string>
     <string name="quesionmark">\?</string>
     <string name="shelftitle1">sopCategory</string>
     <string name="pagenum">stepNumber</string>
-    <string name="addpage">Add Step</string>
-    <string name="editpage">Edit Step</string>
+    <string name="addpage">Add Page</string>
+    <string name="editpage">Edit Page</string>
     <string name="editssaved">Edits were saved</string>
-    <string name="entertitle">Please enter a title for the step</string>
-    <string name="stepsspace">Step</string>
+    <string name="entertitle">Please enter a title for the page</string>
+    <string name="stepsspace">Page \</string>
     <string name="editpage1">editStep</string>
     <string name="pagetitle">stepTitle</string>
     <string name="pagedescrip">stepDescription</string>
