Feat: shows collab logo is shared  Menu is different for shared user. No edit or collab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,8 +74,8 @@
     <string name="sharedpass">JonNyBgOoDeSHARED</string>
     <string name="new_bookshelf">Create a book shelf   to keep your handbooks organized</string>
     <string name="sharedbook">Shared Book</string>
-    <string name="bookfrom">Handbook from /</string>
-    <string name="receive">would you like to receive /</string>
+    <string name="bookfrom">Handbook from \</string>
+    <string name="receive">would you like to receive \</string>
     <string name="not_accepted">Item not accepted</string>
     <string name="sharedbooks2">Shared Books</string>
     <string name="sharedstatus">sharedStatus</string>
@@ -92,7 +92,7 @@
     <string name="rusuredelete">Are you sure you want to delete \</string>
     <string name="questionmark">\?</string>
     <string name="isdeleted">\ is Deleted</string>
-    <string name="deleted">Deleted</string>
+    <string name="deleted">\ Deleted</string>
     <string name="steps">steps</string>
     <string name="usernameset">User nickname is set!</string>
     <string name="user">Users</string>
