Style: on edit page button says 'Save Changes'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="add_description_of_step">Add description for page</string>
     <string name="complete_sop">Complete Book</string>
     <string name="add_another_step">add another page</string>
-    <string name="save_step">Save page</string>
+    <string name="save_step">Save Changes</string>
     <string name="search_users">Search Users</string>
     <string name="search">search</string>
     <string name="sharedbooks">No shared Handbooks</string>
